--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.3",
+    "connect-history-api-fallback": "^2.0.0",
     "core-js": "^3.8.3",
     "express": "^4.18.1",
     "serve-static": "^1.15.0",
